[gd_scene load_steps=7 format=3 uid="uid://b24paoytifvee"]

[ext_resource type="Script" path="res://navigation_level.gd" id="1_i0ara"]
[ext_resource type="PackedScene" uid="uid://uah4tbr2rngq" path="res://level/Level.tscn" id="2_2fbvs"]
[ext_resource type="PackedScene" uid="uid://dkoddcuh26v5o" path="res://customers/NavigationNPC.tscn" id="3_q5itn"]
[ext_resource type="PackedScene" uid="uid://cgbcxgm67lcw" path="res://menu/pause_menu.tscn" id="4_3birv"]
[ext_resource type="Script" path="res://menu/v_box_container.gd" id="5_bcltd"]

[sub_resource type="NavigationMesh" id="NavigationMesh_ijxjm"]
vertices = PackedVector3Array(-4.5, 0.5, -4.5, -4.5, 0.5, 4.5, 4.5, 0.5, 4.5, 4.5, 0.5, -4.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[node name="World" type="NavigationRegion3D"]
navigation_mesh = SubResource("NavigationMesh_ijxjm")
script = ExtResource("1_i0ara")

[node name="Level" parent="." instance=ExtResource("2_2fbvs")]

[node name="NavigationNPC" parent="." instance=ExtResource("3_q5itn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.976457, 0)

[node name="PauseMenu" parent="." instance=ExtResource("4_3birv")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.5
offset_top = -98.5
offset_right = 210.5
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_bcltd")

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "New Game"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Load"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="CameraPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(-4.37114e-08, -0.258819, 0.965926, 0, 0.965926, 0.258819, -1, 1.13133e-08, -4.2222e-08, 40, 15, 0)

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="VBoxContainer" method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="VBoxContainer" method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="VBoxContainer" method="_on_quit_button_pressed"]
